vac-rs/crates/surfaces/tui/src/bottom_pane/chat_composer/snapshots/vac_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_mode_only.snap
---
source: crates/surfaces/tui/src/bottom_pane/chat_composer/footer_flash_parts/../split_002_footerflash_tests.rs.inc
expression: terminal.backend()
---
"                          "
"› Ask VAC to do anything  "
"                          "
"                          "
"                          "
"                          "
"                          "
"                          "
"  Plan mode               "
